--- a/RickNMorty.xcodeproj/xcshareddata/xcschemes/RickNMorty Watch (Notification).xcscheme
+++ b/RickNMorty.xcodeproj/xcshareddata/xcschemes/RickNMorty Watch (Notification).xcscheme
@@ -55,7 +55,7 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
-      notificationPayloadFile = "Inspi Watch Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "RickNMorty Watch Extension/PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -74,7 +74,7 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
-      notificationPayloadFile = "Inspi Watch Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "RickNMorty Watch Extension/PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
