--- a/RickNMorty.xcodeproj/xcshareddata/xcschemes/RickNMorty Watch.xcscheme
+++ b/RickNMorty.xcodeproj/xcshareddata/xcschemes/RickNMorty Watch.xcscheme
@@ -54,7 +54,7 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      notificationPayloadFile = "Inspi Watch Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "RickNMorty Watch Extension/PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
